@@ -3,6 +3,8 @@ AUX sabnzbd.ini 356 SHA256 42099306da9c582809753e885cd2ac3ed34a07702d2009d959ca6
 AUX sabnzbd.init 1213 SHA256 863e2980a815773c4a9b34a720d1ff7dc3bfbff270dff2d7bb1c637613befccf SHA512 abd79810d48494ddc2588be4337a77a712b7db2b3d2a2d9e34b556fadd12e4b70b99f38904f7ade882c5521f8301b4809530ecb503dc08783626435f18014dcb WHIRLPOOL ff3b7f016abf06ca5dddb448bc8dfb7323ae73625326f5cae0ac326edd6d7cb12e501fc2ae7828c1c49b72da37ce71ffb05efa74959cf4987349ff2284359048
 AUX sabnzbd.logrotate 177 SHA256 0063c24056a2dfaa48192089451adfc6647bbb201f7c64185ee0f710d29af61a SHA512 52408ccb8b812b9da1e62c9a22ca705a0f4d5d7e194c9ea0637f34e52344372071ac6fbb1055d9cfce8b3264629e6fed9d1a59490fe821d3a1ac08835c4ec146 WHIRLPOOL f2856d569bd0c40acc825621b9546a8d0239a3d3a80052dfe45095cc836a3cb52d3dc9e4e099feb272a4acf657c2f92eb86ac0d062804c83ef4dea1500e5cc1f
 DIST SABnzbd-0.7.11-src.tar.gz 2273355 SHA256 de9c22377e89b081b7c264993c159588acb86206d1b82a465554e2f9df39b311 SHA512 4a56a597652b9587771994e5a57e59fb0d716a36c90d7f4058a05061e5679a7a6a0cfcd16f6d6b673a95fa02f16983755affbb2113f0b9da947303ea6f978bb9 WHIRLPOOL d278f742110f55eaa787c54c455079c46f537540b83362670590855c5697b3c27e31e334d915554db283f6f8c9c88c46bfa7c1f5729caae2a1bc3357b0ed75a4
+DIST SABnzbd-0.7.12-src.tar.gz 2275110 SHA256 9763414af2b3b9eccf933d01dfe5404845aa4b2a5ce6b63c643fc5cb45d2fb9b SHA512 e1d09613146f76fb990aee648c8a61f6eda9473b1e422d4a90b77c6a54adebc25e4fedbbd1d163af5617bac489a75bc84a6b86cf03a80312966cd373e79da028 WHIRLPOOL 17fe329980282ac44b3a87a32fd27369bb560245fc039db4f7c87beed10fab71463adb1e4f13ba72aa3e4dd1e49c81c84c48b587f949df105ca05af1e0fd3c01
 EBUILD sabnzbd-0.7.11.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
-MISC ChangeLog 3119 SHA256 52d1684bc9fde7bc840db203c477e20c101686f94a698a1f8ab5e7df325ae045 SHA512 de86cc7447dc9fac4f3f91f584e1688d2d706e775291f6d965d1ab3671507a27c40cc71b3388ce804ab8a1b969a026cf9d4c15774002dd6e532a7e0f7b440961 WHIRLPOOL 1e433ed3a25907a2eb693ccef7ef9ba19513235b641cdfdb5abbf1a0ac1b598fd4e1cdc7e71467d8520a8b91cfa25a6a836a58736a76bebd9807e558766b6a79
+EBUILD sabnzbd-0.7.12.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
+MISC ChangeLog 3254 SHA256 b12c3830da6e3e46e3b52fe38ba38b666f2a51c10a659b44033d8aabef5a2330 SHA512 c1eacf4e815e56751308699861018d1c89ceca95c365de76a8dabb84ffb9e9e84c02bfca7d1934f751361b749f5cef7359fe578e31fc5a267fec166eb739ebbf WHIRLPOOL f3d9ff4e9886955ff15d9313c07f2d8ae2c33020c028abccc87a39e16bc011da7303461c63a13677dc14d46c43bef9c3ee1d911013f59ec8d4642759f312ad03
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
