@@ -2,6 +2,12 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sabnzbd-0.7.12 (23 May 2013)
+
+  23 May 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
+  +sabnzbd-0.7.12.ebuild:
+  Version bump.
+
 *sabnzbd-0.7.11 (09 Feb 2013)
 
   09 Feb 2013; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
